Fix canvas margin when ruler is toggled on
Before this commit:
- Canvas margin would be ignored when showruler is triggered
  - Because of this the bg ruler couldn't be transparent (otherwise
  the canvas scrollbar would be visible overlapping it)

With this commit: Whenever ruler is visible -> re set the canvas
container y position

--- a/browser/css/cool.css
+++ b/browser/css/cool.css
@@ -42,6 +42,7 @@
 
 	/* Ruler */
 	--ruler-height: 20px;
+	--canvas-container-y: var(--ruler-height);
 }
 .focus-hidden:focus {
 	outline: none;
